--- a/franske-course-information/modules/itc-2516/pages/assignments.adoc
+++ b/franske-course-information/modules/itc-2516/pages/assignments.adoc
@@ -151,16 +151,16 @@ For each chapter having lab activities you will need to submit one lab report wh
 . Lab 6.4.2 - Implement EtherChannel
 . Lab 7.4.2 - Implement DHCPv4
 * NOTE: This lab contains substantial errors! Please make these corrections to your lab before starting:
-*. In Part 1, Step 1a '''DO NOT''' "Record the second IP address in the Address Table for S1 VLAN 200 and enter the associated default gateway." this text is an error, you will not use the second IP address from Subnet A for anything special.
-*. In Part 1, Step 1b there is no place in the address table to record an address for '''S1 VLAN 1'''. Instead you should "Record the second IP address in the Address Table for '''S1 VLAN 200''' and enter the associated default gateway."
-*. In Part 1, Step 1c You should "Record the second IP address in the Address Table for '''S2 VLAN 1''' and enter the associated default gateway." even though the lab does not mention this.
-*. In Part 1, Step 5c you are asked to configure default routes on each router but we have not learned how to do this yet. We'll learn about this in module 15. Please enter these commands, one on R1 and one on R2, in the configure terminal mode of the router:
-*.* <pre>R1(config)# ip route 0.0.0.0 0.0.0.0 10.0.0.2</pre>
-*.* <pre>R2(config)# ip route 0.0.0.0 0.0.0.0 10.0.0.1</pre>
+** In Part 1, Step 1a '''DO NOT''' "Record the second IP address in the Address Table for S1 VLAN 200 and enter the associated default gateway." this text is an error, you will not use the second IP address from Subnet A for anything special.
+** In Part 1, Step 1b there is no place in the address table to record an address for '''S1 VLAN 1'''. Instead you should "Record the second IP address in the Address Table for '''S1 VLAN 200''' and enter the associated default gateway."
+** In Part 1, Step 1c You should "Record the second IP address in the Address Table for '''S2 VLAN 1''' and enter the associated default gateway." even though the lab does not mention this.
+** In Part 1, Step 5c you are asked to configure default routes on each router but we have not learned how to do this yet. We'll learn about this in module 15. Please enter these commands, one on R1 and one on R2, in the configure terminal mode of the router:
+*** <pre>R1(config)# ip route 0.0.0.0 0.0.0.0 10.0.0.2</pre>
+*** <pre>R2(config)# ip route 0.0.0.0 0.0.0.0 10.0.0.1</pre>
 . Lab 8.5.1 - Configure DHCPv6
 * NOTE: In Part 1, Step 4b this lab asks you to configure a default route on each router pointed towards the other router. We haven't learned how to configure default routes yet though so you can run the following configuration commands (one on R1 and one on R2) to fix this.
-.** <pre>R1(config)# ipv6 route ::/0 2001:db8:acad:2::2</pre>
-.** <pre>R2(config)# ipv6 route ::/0 2001:db8:acad:2::1</pre>
+** <pre>R1(config)# ipv6 route ::/0 2001:db8:acad:2::2</pre>
+** <pre>R2(config)# ipv6 route ::/0 2001:db8:acad:2::1</pre>
 . Lab 11.6.2 - Switch Security Configuration
 . Lab 13.1.11 - Configure a Wireless Network
 * *FALL 2021 NOTE:* Complete the Packet Tracer version of this lab this year, wireless networking is not supported on Netlab. You should still submit a lab report as normal for this PT lab.
@@ -174,11 +174,11 @@ For each chapter having lab activities you will need to submit one lab report wh
 ** Password: Password123!
 ** Wireless SSID: CCNA-Wxx (replace xx with the number of one of your PCs, found on a sticker on top of the classroom PC under your desk)
 ** Wireless Passphrase: Cisco456!
-* '''NOTE:''' Do not complete Part 4 of this lab which is listed as optional.
-* '''NOTE: Before packing up your equipment be sure to reset your router back to factory defaults'''
+* *NOTE:* Do not complete Part 4 of this lab which is listed as optional.
+* *NOTE:* Before packing up your equipment be sure to reset your router back to factory defaults'''
 . Lab 15.6.2 - Configure IPv4 and IPv6 Static and Default Routes
 . Lab 16.3.2 - Troubleshoot Static and Default Routes
-* NOTE: In this lab you need to start by loading a starting configuration onto your network devices. INSERT LINK TO STARTING CONFIGS HERE!
+* *NOTE:* In this lab you need to start by loading a starting configuration onto your network devices. INSERT LINK TO STARTING CONFIGS HERE!
 
 === Homework
 Homework activities will require submitting the actual answers to each question in the activity and may require showing your work as well. Homework assignment are individual, you and your lab partner need to both turn them in separately even if you work on them together.
