--- a/franske-course-information/modules/itc-2516/pages/assignments.adoc
+++ b/franske-course-information/modules/itc-2516/pages/assignments.adoc
@@ -80,6 +80,7 @@ Homework activities will require submitting the actual answers to each question 
 
 == Participation Activities
 Any participation activities completed in the course will go here. This falls into the participation category of your course grade.
+
 * Complete the system test exam (5 points for completing)
 * Complete the online course feedback form (5 points for completing)
 * Complete the online practice final exam (10 points for attempting)
@@ -87,6 +88,7 @@ Any participation activities completed in the course will go here. This falls in
 
 == Unit Assessments
 You are responsible for completing all of the online unit assessments listed below. Multiple modules are included in single exams. These exams fall into the online assessments category of your course grade. 
+
 * Modules 1 - 3: Basic Network Connectivity and Communications Exam
 * Modules 4 - 7: Ethernet Concepts Exam
 * Modules 8 - 10: Communicating Between Networks Exam
@@ -170,39 +172,53 @@ This lab contains substantial errors! Please make these corrections to your lab 
 ----
 R1(config)# ip route 0.0.0.0 0.0.0.0 10.0.0.2
 ----
+----
 R2(config)# ip route 0.0.0.0 0.0.0.0 10.0.0.1
 ----
 ====
 --
 . Lab 8.5.1 - Configure DHCPv6
-* NOTE: In Part 1, Step 4b this lab asks you to configure a default route on each router pointed towards the other router. We haven't learned how to configure default routes yet though so you can run the following configuration commands (one on R1 and one on R2) to fix this.
 +
 --
+[NOTE]
+====
+In Part 1, Step 4b this lab asks you to configure a default route on each router pointed towards the other router. We haven't learned how to configure default routes yet though so you can run the following configuration commands (one on R1 and one on R2) to fix this.
 ----
 R1(config)# ipv6 route ::/0 2001:db8:acad:2::2
 ----
 ----
 R2(config)# ipv6 route ::/0 2001:db8:acad:2::1
 ----
+====
 --
 . Lab 11.6.2 - Switch Security Configuration
 . Lab 13.1.11 - Configure a Wireless Network
-* *FALL 2021 NOTE:* Complete the Packet Tracer version of this lab this year, wireless networking is not supported on Netlab. You should still submit a lab report as normal for this PT lab.
-* *NOTE:* Change the router settings as indicated in the lab, use these for the NEW settings:
-** Router IP Address: 172.17.99.1
-** Router Subnet Mask: 255.255.255.0
-** Router Name: CCNA-Rxx (replace xx with the number of one of your PCs, found on a sticker on top of the classroom PC under your desk)
-** DHCP Starting IP Address: 172.17.99.21
-** DHCP Maximum Number of Users: 20
-** Router Username: admin
-** Password: Password123!
-** Wireless SSID: CCNA-Wxx (replace xx with the number of one of your PCs, found on a sticker on top of the classroom PC under your desk)
-** Wireless Passphrase: Cisco456!
-* *NOTE:* Do not complete Part 4 of this lab which is listed as optional.
-* *NOTE:* Before packing up your equipment be sure to reset your router back to factory defaults'''
++
+--
+[NOTE]
+====
+Change the router settings as indicated in the lab, use these for the NEW settings:
+
+* Router IP Address: 172.17.99.1
+* Router Subnet Mask: 255.255.255.0
+* Router Name: CCNA-Rxx (replace xx with the number of one of your PCs, found on a sticker on top of the classroom PC under your desk)
+* DHCP Starting IP Address: 172.17.99.21
+* DHCP Maximum Number of Users: 20
+* Router Username: admin
+* Password: Password123!
+* Wireless SSID: CCNA-Wxx (replace xx with the number of one of your PCs, found on a sticker on top of the classroom PC under your desk)
+* Wireless Passphrase: Cisco456!
+
+*NOTE:* Do not complete Part 4 of this lab which is listed as optional.
+*NOTE:* Before packing up your equipment be sure to reset your router back to factory defaults'''
+====
+--
 . Lab 15.6.2 - Configure IPv4 and IPv6 Static and Default Routes
 . Lab 16.3.2 - Troubleshoot Static and Default Routes
-* *NOTE:* In this lab you need to start by loading a starting configuration onto your network devices. INSERT LINK TO STARTING CONFIGS HERE!
++
+--
+NOTE: In this lab you need to start by loading a starting configuration onto your network devices. INSERT LINK TO STARTING CONFIGS HERE!
+--
 
 === Homework
 Homework activities will require submitting the actual answers to each question in the activity and may require showing your work as well. Homework assignment are individual, you and your lab partner need to both turn them in separately even if you work on them together.
@@ -216,6 +232,7 @@ Homework activities will require submitting the actual answers to each question 
 
 == Unit Assessments
 You are responsible for completing all of the online unit assessments listed below. Multiple modules are included in single exams. These exams fall into the online assessments category of your course grade.
+
 * Modules 1 - 4: Switching Concepts, VLANs, and InterVLAN Routing Exam
 * Modules 5 - 6: Redundant Networks Exam
 * Modules 7 - 9: Available and Reliable Networks Exam 
