--- a/franske-course-information/modules/itc-2516/pages/assignments.adoc
+++ b/franske-course-information/modules/itc-2516/pages/assignments.adoc
@@ -1,8 +1,9 @@
-= CCNA 1 Assignment Details and Directions
+= ITC-2516 Assignment Details and Directions
+== CCNA 1 Assignment Details and Directions
 This page is organized into sections based on the category of your final grade that the assignment will fall into. Be sure to check the syllabus for information about how the categories are weighted in your final grade.
 
-== Lab & Homework Assignments
-=== Packet Tracer Online Submissions
+=== Lab & Homework Assignments
+==== Packet Tracer Online Submissions
 Each of these activities will be submitted using the Packet Tracer ScoreUP Online Submission process. Points will be earned for each submitted activity based on correctness and completion of the activity. You will see a completion percentage for each activity in the Packet Tracer software before submitting. Remember to submit through ScoreUP inside of Packet Tracer and to save for yourself a copy of your finished activity file in case it's requested by your instructor.
 
 . PT 2.5.5 - Configure Initial Switch Settings (5 points)
@@ -28,7 +29,7 @@ Each of these activities will be submitted using the Packet Tracer ScoreUP Onlin
 . PT 17.8.2 - Skills Integration Challenge (15 points)
 . PT 17.8.3 - Troubleshooting Challenge (15 points)
 
-=== Lab Reports
+==== Lab Reports
 For each module having lab activities you will need to submit one lab report which covers all of the lab activities listed below in the module. Submissions are made through the NetAcad site. You do not need to submit answers to the questions in the activities, those are for your own learning use only. Lab activities may include remote equipment access, campus equipment, or packet tracer activities. If you work with a partner on a lab you only need to submit a single lab report for the two of you but it must have both your names on it. Each lab report is worth up to 20 points.
 
 [NOTE] 
@@ -70,7 +71,7 @@ NOTE: Use your own computer for the wireless portion, the lab computers only hav
 NOTE: Design your network in the Packet Tracer Software, in addition to your lab report upload your Packet Tracer File to the NetAcad site for this assignment.
 --
 
-=== Homework
+==== Homework
 Homework activities will require submitting the actual answers to each question in the activity and may require showing your work as well. Homework assignment are individual, you and your lab partner need to both turn them in separately even if you work on them together.
 
 * Lab 11.6.6 - Calculate IPv4 Subnets (10 Points) - This activity will be submitted as a "quiz" on the Netacad site where you will enter some of your answers from the activity into the quiz.
@@ -86,7 +87,7 @@ Any participation activities completed in the course will go here. This falls in
 * Complete the online practice final exam (10 points for attempting)
 * Meet with the instructor once per week to discuss course progress and ask questions (up to 10 points each based on progress)
 
-== Unit Assessments
+=== Unit Assessments
 You are responsible for completing all of the online unit assessments listed below. Multiple modules are included in single exams. These exams fall into the online assessments category of your course grade. 
 
 * Modules 1 - 3: Basic Network Connectivity and Communications Exam
@@ -96,19 +97,19 @@ You are responsible for completing all of the online unit assessments listed bel
 * Modules 14 - 15: Network Application Communications Exam
 * Modules 16 - 17: Building and Securing a Small Network Exam
 
-== Skills Final Exam
+=== Skills Final Exam
 The Skills Final Exam is designed to test your ability to apply the concepts learned in this class and practiced in labs to common, real-world scenarios. There are two parts to this portion of your grade.
 
 * Half of your grade in this category will be based on successfully completing all parts of the online Packet Tracer Skills Assessment (PTSA) at home. You grade will be based on correctly completing all parts of the activity. You will be able to use outside resources for this part of the exam.
 * Half of your grade in this category will be based on completing a lab equipment skills exam. You will not be able to use any resources other than those specified by your instructor on this part of the exam.
 
-== Online Final Exam
+=== Online Final Exam
 You will need to complete an online final exam on the NetSpace site.
 
-= CCNA 2 Assignment Details and Directions
-== Lab & Homework Assignments
+== CCNA 2 Assignment Details and Directions
+=== Lab & Homework Assignments
 
-=== Packet Tracer Online Submissions
+==== Packet Tracer Online Submissions
 Each of these activities will be submitted using the Packet Tracer ScoreUP Online Submission process. Points will be earned for each submitted activity based on correctness and completion of the activity. You will see a completion percentage for each activity in the Packet Tracer software before submitting.
 
 . PT 1.3.6 - Configure SSH (5 points)
@@ -139,7 +140,7 @@ Each of these activities will be submitted using the Packet Tracer ScoreUP Onlin
 . PT 15.6.1 - Configure IPv4 and IPv6 Static and Default Routes (10 points)
 . PT 16.3.1 - Troubleshoot Static and Default Routes (10 points)
 
-=== Lab Reports
+==== Lab Reports
 For each chapter having lab activities you will need to submit one lab report which covers all of the lab activities listed below in the chapter. You do not need to submit answers to the questions in the activities, those are for your own learning use only. Lab activities may include remote equipment access, campus equipment, or packet tracer activities. If you work with a partner on a lab you only need to submit a single lab report for the two of you but it must have both your names on it. Each lab report is worth up to 20 points.
 
 . Lab 1.1.7 - Basic Switch Configuration
@@ -220,17 +221,17 @@ Change the router settings as indicated in the lab, use these for the NEW settin
 NOTE: In this lab you need to start by loading a starting configuration onto your network devices. INSERT LINK TO STARTING CONFIGS HERE!
 --
 
-=== Homework
+==== Homework
 Homework activities will require submitting the actual answers to each question in the activity and may require showing your work as well. Homework assignment are individual, you and your lab partner need to both turn them in separately even if you work on them together.
 
 * Participate in an online forum discussion (typically 3 quality posts or more) of each module on the Cisco Netacad site. See forum posting page for details. (up to 10 points each module based on quality)
 
-== Participation Activities
+=== Participation Activities
 * Complete the online course feedback form (5 points for completing)
 * Complete the online practice final exam (10 points for attempting)
 * Meet with the instructor once per week to discuss course progress and ask questions (up to 10 points each based on progress)
 
-== Unit Assessments
+=== Unit Assessments
 You are responsible for completing all of the online unit assessments listed below. Multiple modules are included in single exams. These exams fall into the online assessments category of your course grade.
 
 * Modules 1 - 4: Switching Concepts, VLANs, and InterVLAN Routing Exam
@@ -239,13 +240,13 @@ You are responsible for completing all of the online unit assessments listed bel
 * Modules 10 - 13: L2 Security and WLANs Exam 
 * Modules 14 - 16: Routing Concepts and Configuration Exam 
 
-== Skills Final Exam
+=== Skills Final Exam
 The Skills Final Exam is designed to test your ability to apply the concepts learned in this class and practiced in labs to common, real-world scenarios. There are two parts to this portion of your grade.
 
 * Half of your grade in this category will be based on successfully completing all parts of the online Packet Tracer Skills Assessment at home. You grade will be based on correctly completing all parts of the activity. You will be able to use outside resources for this part of the exam.
 * Half of your grade in this category will be based on completing a lab equipment skills exam. You will not be able to use any resources other than those specified by your instructor on this part of the exam.
 
-== Online Final Exam
+=== Online Final Exam
 You will need to complete an online final exam on the NetSpace site.
 
 include::program-info:ROOT:partial$stdfooter.adoc[]
