--- a/franske-course-information/modules/itc-2611/pages/schedule.adoc
+++ b/franske-course-information/modules/itc-2611/pages/schedule.adoc
@@ -1,27 +1,26 @@
-= ITC-2516 Official Course Schedule
+= ITC-2611 Official Course Schedule
 
 == Official Course Schedule
 [%autowidth,options="header"]
-|=================================================================================================================================================================================================================================================================================================================================================================================================================================================================================================================================
-| Date    | Week                            | Readings to do before the next date  | Work to do in class today                            | Work to do before the next date                                                                                                                | Assignments Due (Today by 2:00pm unless otherwise noted)                                                                                                                                                                             
-| 22-Aug  | 1                               | Modules 1 & 2                        | Course Introduction, Verify NetAcad Access           | Module 2 Packet Tracer Activities, Module 1 & 2 Online Discussion First Posts                                                                  |                                                                                                                                                                                                                                      
-| 29-Aug  | 2                               | Modules 3 & 4                        | Module 2 Lab Activities, Instructor Meeting          | Module 3 & 4 Packet Tracer Activities, Module 1 & 2 Online Discussion Response Posts, Module 3 & 4 Online Discussion First Posts               | Module 1 & 2 Online Discussion First Posts                                                                                                                                                                                           
-| 5-Sep   | 3 - NO CLASS MEETING LABOR DAY  | Modules 5, 6 & 7                     |                                                      | Module 3 & 4 Online Discussion Response Posts, Module 5, 6 & 7 Online Discussion First Posts                                                   | Module 2, 3 & 4 Packet Tracer Submissions, Module 2 Lab Reports, Module 1 & 2 All Discussion Posts, Module 3 & 4 First Discussion Posts, Module 1-3 Exam                                                                             
-| 12-Sep  | 4                               | Modules 8, 9 & 10                    | Module 3, 4, & 7 Lab Activities, Instructor Meeting  | Module 9 & 10 Packet Tracer Activities, Module 5-7 Discussion Response Posts, Module 8-10 Discussion First Posts                               | Module 3 & 4 All Discussion Posts, Module 5-7 First Discussion Posts, Module 4-7 Exam                                                                                                                                                
-| 19-Sep  | 5                               | Module 11                            | Module 9 & 10 Lab Activities, Instructor Meeting     | Module 11 Packet Tracer and Homework Activities, Module 8-10 Discussion Response Posts, Module 11 Discussion First Posts                       | Module 3, 4, & 7 Lab Reports, Module 9 & 10 Packet Tracer Submissions, Module 5-7 All Discussion Posts, Module 8-10 Discussion First Posts, Module 8-10 Exam                                                                         
-| 26-Sep  | 6                               | Module 12 & 13                       | Instructor Meeting                                   | Module 12 & 13 Packet Tracer and Homework Activities, Module 11 Discussion Response Posts, Module 12-13 Discussion First Posts                 | Module 9 & 10 Lab Repots, Module 11 Packet Tracer Submissions and Homework, Module 8-10 All Discussion Posts, Module 11 First Discussion Posts                                                                                       
-| 3-Oct   | 7                               | Module 14 & 15                       | Module 12 & 13 Lab Activities, Instructor Meeting    | Module 12 & 13 Discussion Response Posts, Module 14-15 Discussion First Posts                                                                  | Module 12 & 13 Packet Tracer Submissions and Homework, Module 11 All Discussion Posts, Module 12-13 Discussion First Posts, Module 11-13 Exam                                                                                        
-| 10-Oct  | 8                               | Module 16 & 17                       | Module 14 & 15 Lab Activities, Instructor Meeting    | Module 16 & 17 Packet Tracer Activities, Module 14 & 15 Discussion Response Posts, Module 16-17 Discussion First Posts                         | Module 12 & 13 Lab Reports, Module 12 & 13 All Discussion Posts, Module 14-15 Discussion First Posts, Module 14-15 Exam                                                                                                              
-| 17-Oct  | 9                               |                                      | Module 16 & 17 Lab Activities, Instructor Meeting    | Practice Final Exam, Practice Packet Tracer Skills Assessment, Cisco Course Feedback Form, Online Final Exam, Packet Tracer Skills Assessment  | Module 16 & 17 Packet Tracer Submissions, Module 14 & 15 Lab Reports ,Module 14-15 All Discussion Posts, Module 16 & 17 First Discussion Posts, Module 16-17 Exam                                                                    
-| 24-Oct  | 10                              | CCNA 2 Modules 1, 2 & 3              | CCNA 1 Equipment Skills Exam                         | Module 1 & 3 Packet Tracer Activities, Module 1-3 Discussion First Posts                                                                       | Module 16 & 17 Lab Reports, CCNA 1 Practice Final Exam, CCNA 1 Practice PT Skills Assessment, Cisco Course Feedback Form, CCNA 1 Online Final Exam, CCNA 1 PT Skills Assessment, CCNA 1 Modules 16-17 All Discussion Posts           
-| 31-Oct  | 11                              | Modules 4 & 5                        | Module 1 & 3 Lab Activities, Instructor Meeting      | Module 4 Packet Tracer Activities, Module 1-3 Discussion Response Posts, Module 4 & 5 Discussion First Posts                                   | Module 1 & 3 Packet Tracer Submissions, Module 1-3 Discussion First Posts                                                                                                                                                            
-| 7-Nov   | 12                              | Modules 6, 7 & 8                     | Module 4 & 5 Lab Activities, Instructor Meeting      | Module 6 & 7 Packet Tracer Activities, Module 4 & 5 Discussion Response Posts, Module 6-8 Discussion First Posts                               | Module 1 & 3 Lab Reports, Module 4 & 5 Packet Tracer Online Submissions, Module 1-3 All Discussion Posts, Module 4 & 5 Discussion First Posts, Module 1-4 Exam                                                                       
-| 14-Nov  | 13                              | Modules 9, 10 & 11                   | Module 6, 7, & 8 Lab Activities, Instructor Meeting  | Module 9 & 11 Packet Tracer Activities, Module 6-8 Discussion Response Posts, Module 9-11 Discussion First Posts                               | Module 4 & 5 Lab Reports, Module 6, 7 & 8 Packet Tracer Online Submissions, Module 4 & 5 All Discussion Posts, Module 6-8 Discussion First Posts, Module 5-6 Exam                                                                    
-| 21-Nov  | 14                              | Modules 12 & 13                      | Module 11 Lab Activities, Instructor Meeting         | Module 13 Packet Tracer Activities, Module 9-11 Discussion Response Posts, Module 12 & 13 Discussion First Posts                               | Module 6, 7, & 8 Lab Reports, Module 9 & 11 Packet Tracer Online Submissions, Module 6-8 All Discussion Posts, Module 9-11 Discussion First Posts                                                                                    
-| 28-Nov  | 15                              | Modules 14, 15 & 16                  | Module 13 Lab Activities, Instructor Meeting         | Module 14, 15 & 16 Packet Tracer Activities, Module 12 & 13 Discussion Response Posts, Module 14-16 Discussion First Posts                     | Module 11 Lab Reports, Module 13 Packet Tracer Online Submissions, Module 9-11 Discussion All Posts, Module 12 & 13 Discussion First Posts, Module 7-9 Exam                                                                          
-| 5-Dec   | 16                              |                                      | Module 15 & 16 Lab Activities, Instructor Meeting    | Practice Final Exam, Practice Packet Tracer Skills Assessment, Cisco Course Feedback Form, Online Final Exam, Packet Tracer Skills Assessment  | Module 13 Lab Reports, Module 14, 15 & 16 Packet Tracer Online Submissions, Module 12 & 13 Discussion All Posts, Module 14-16 Discussion First Posts, Module 10-13 Exam                                                              
-| 12-Dec  | FE Week                         |                                      | CCNA 2 Equipment Skills Exam                         |                                                                                                                                                | Module 15 & 16 Lab Reports, CCNA 2 Practice Final Exam, CCNA 2 Practice PT Skills Assessment, Cisco Course Feedback Form, CCNA 2 Online Final Exam, CCNA 2 PT Skills Assessment, Module 14-16 Exam, Module 14-16 All Discussion Posts
-|=================================================================================================================================================================================================================================================================================================================================================================================================================================================================================================================================
-
+|============================================================================================================================================================================================================================================================================================================================================================================
+| Date    | Week     | Readings to do before the end of the week  | Work to do before the end of the week                                                                        | Assignments Due (Today by 6:00pm unless otherwise noted)                                                                      | Notes                                                     
+| 23-Aug  | 1        | Chapters 1 & 2                             | Chapter 1 & 2 Lab Activities, Chapter 1 & 2 Online Discussion First Post                                     |                                                                                                                               |                                                           
+| 30-Aug  | 2        | Chapters 3 & 4                             | Chapter 3 & 4 Lab Activities, Chapter 1 & 2 Discussion All Posts, Chapter 3 & 4 Discussion First Posts       | Chapter 1 & 2 Discussion First Posts                                                                                          |                                                           
+| 6-Sep   | 3        | Chapters 5 & 6                             | Chapter 5 & 6 Lab Activities, Chapter 3 & 4 Discussion All Posts, Chapter 5 & 6 Discussion First Posts       | Chapter 1-4 Lab Reports, Chapter 1 & 2 Discussion All Posts, Chapter 3 & 4 Discussion First Posts                             |                                                           
+| 13-Sep  | 4        | Chapters 7 & 8                             | Chapter 8 Lab Activities, Chapter 5 & 6 Discussion All Posts, Chapter 7 & 8 Discussion First Posts           | Chapter 5 & 6 Lab Reports, Chapter 3 & 4 Discussion All Posts, Chapter 5 & 6 Discussion First Posts, Chapter 1-5 Exam         |                                                           
+| 20-Sep  | 5        | Chapters 9 & 10                            | Chapter 9 & 10 Lab Activities, Chapter 7 & 8 Discussion All Posts, Chapter 9 & 10 Discussion First Posts     | Chapter 8 Lab Report, Chapter 5 & 6 Discussion All Posts, Chapter 7 & 8 Discussion First Posts, Chapter 6-7 Exam              | NO Instructor Meeting This Week, Student Success Day Today
+| 27-Sep  | 6        | Chapters 11 & 12                           | Chapter 11 & 12 Lab Activities, Chapter 9 & 10 Discussion All Posts, Chapter 11 & 12 Discussion First Posts  | Chapter 9 & 10 Lab Reports, Chapter 7 & 8 Discussion All Posts, Chapter 9 & 10 Discussion First Posts, Chapter 8-10 Exam      |                                                           
+| 4-Oct   | 7        | Chapters 13 & 14                           | Chapter 11 & 12 Discussion All Posts, Chapter 13 & 14 Discussion First Posts                                 | Chapter 11 & 12 Lab Reports, Chapter 9 & 10 Discussion All Posts, Chapter 11 & 12 Discussion First Posts, Chapter 11-12 Exam  |                                                           
+| 11-Oct  | 8        | Chapters 15 & 16                           | Chapter 15 & 16 Lab Activities, Chapter 13 & 14 Discussion All Posts, Chapter 15 & 16 Discussion First Posts | Chapter 11 & 12 Discussion All Posts, Chapter 13 & 14 Discussion First Posts, Chapter 13-14 Exam                              |                                                           
+| 18-Oct  | 9        | Chapters 17 & 18                           | Chapter 15 & 16 Discussion All Posts, Chapter 17 & 18 Discussion First Posts                                 | Chapter 15 & 16 Lab Reports, Chapter 13 & 14 Discussion All Posts, Chapter 15 & 16 Discussion First Posts, Chapter 15-16 Exam |                                                           
+| 25-Oct  | 10       | Chapters 19 & 20                           | Chapter 17 & 18 Discussion All Posts, Chapter 19 & 20 Discussion First Posts                                 | Chapter 15 & 16 Discussion All Posts, Chapter 17 & 18 Discussion First Posts                                                  |                                                           
+| 1-Nov   | 11       | Chapters 21 & 22                           | Chapter 19 & 20 Discussion All Posts, Chapter 21 & 22 Discussion First Posts                                 | Chapter 17 & 18 Discussion All Posts, Chapter 19 & 20 Discussion First Posts, Chapter 17-19 Exam                              |                                                           
+| 8-Nov   | 12       | Chapters 23 & 24                           | Chapter 24 Lab Activities, Chapter 21 & 22 Discussion All Posts, Chapter 23 & 24 Discussion First Posts      | Chapter 19 & 20 Discussion All Posts, Chapter 21 & 22 Discussion First Posts, Chapter 20-21 Exam                              |                                                           
+| 15-Nov  | 13       | Chapters 25 & 26                           | Chapter 25 & 26 Lab Activities, Chapter 23 & 24 Discussion All Posts, Chapter 25 & 26 Discussion First Posts | Chapter 24 Lab Report, Chapter 21 & 22 Discussion All Posts, Chapter 23 & 24 Discussion First Posts, Chapter 22-24 Exam       |                                                           
+| 22-Nov  | 14       | Chapters 27 & 28                           | Chapter 28 Lab Activities, Chapter 25 & 26 Discussion All Posts, Chapter 27 & 28 Discussion First Posts      | Chapter 25 & 26 Lab Reports, Chapter 23 & 24 Discussion All Posts, Chapter 25 & 26 Discussion First Posts, Chapter 25-26 Exam |                                                           
+| 29-Nov  | 15       | Chapter 29                                 | Chapter 27 & 28 Discussion All Posts, Chapter 29 Discussion First Posts                                      | Chapter 28 Lab Reports, Chapter 25 & 26 Discussion All Posts, Chapter 27 & 28 Discussion First Posts                          |                                                           
+| 6-Dec   | 16       |                                            | Skills Exam                                                                                                  | Chapter 29 Discussion All Posts, Chapter 27-29 Exam, ENCOR Certification Practice Exam                                        | Instructor meeting not required this week                 
+| 13-Dec  | FE Week  |                                            |                                                                                                              | Skills Exam, Online Final Exam, Course Feedback                                                                               | Instructor meeting not required this week                 
+|============================================================================================================================================================================================================================================================================================================================================================================
 
 include::program-info:ROOT:partial$stdfooter.adoc[]
