--- a/franske-course-information/modules/itc-2300/pages/lab-proxmox-installation.adoc
+++ b/franske-course-information/modules/itc-2300/pages/lab-proxmox-installation.adoc
@@ -9,12 +9,14 @@ You will be assigning static IPs to your systems in this lab. Please use these s
 
 [%autowidth,options="header"]
 |===
-|System |IP
+|System |IP |FQDN Hostname
 
-|HV-A |192.168.1.10
+|HV-A |192.168.1.10 |proxmoxA.podX.itc2300.campus.ihitc.net
 
-|HV-B |192.168.1.11
+|HV-B |192.168.1.11 |proxmoxB.podX.itc2300.campus.ihitc.net
 |===
+
+NOTE: Replace podX in the hostname with your pod ID letter such as hv-a.podA.local
 
 == Instructions
 . You will be installing a Proxmox VE server on the two hypervisor (hv) VMs assigned to you (so do all these steps, unless otherwise indicated, on each computer). If you are unsure about how to do something try checking the https://pve.proxmox.com/wiki/Main_Page[Proxmox Wiki site] first.
@@ -41,8 +43,7 @@ NOTE: If you make a mistake and need to have one or both of your HV VMs erased s
 * Set the Country to United States and Timezone to America/Chicago
 * Record the administrative password for future use, it is strongly suggested you use "itc2300" as the administrative password so that you can reference it here and your instructor can assist with issues in your lab.
 * Set the IP address for each Proxmox system using table above
-* Make sure the hostname is different on each Proxmox VE server and ends with .itc2300.campus.ihitc.net
-** It is recommended you set the name to "podXproxmoxA.itc2300.campus.ihitc.net" (change as needed for your pod letter and HV VM ID letter)
+* Make sure the hostname is different on each Proxmox VE server and is set as identified in the table above
 . Once installation is finished use a web browser on PC-C to access the Proxmox VE server's web interface at the IP address of the hypervisor and login as the root user (username root) and password set during the installation
 +
 --
