--- a/franske-course-information/modules/itc-2300/pages/lab-asterisk-introduction.adoc
+++ b/franske-course-information/modules/itc-2300/pages/lab-asterisk-introduction.adoc
@@ -2,7 +2,7 @@
 
 == Topology Diagram
 
-image::Netlab_Asterisk_Basic_Topology.svg[]
+image::Netlab_Asterisk_Basic_Topology.png[]
 
 == IP Addressing & Phone Extensions
 
