--- a/franske-course-information/modules/ROOT/navtop.adoc
+++ b/franske-course-information/modules/ROOT/navtop.adoc
@@ -2,6 +2,7 @@
 * xref:franske-courses:ROOT:index.adoc[Dr. Franske's Course Pages]
 +
 --
+include::itc-2189:partial$nav.adoc[]
 include::itc-2300:partial$nav.adoc[]
 include::itc-2480:partial$nav.adoc[]
 include::itc-2516:partial$nav.adoc[]
